remove is_https and server_name both are now derived from public_url
